OcctSharp/src/OcctSharp.Native/include/OcctSharp.Native.h

typedef enum OcctSharp_Status
{
  OCCTSHARP_STATUS_SUCCESS = 0,
  OCCTSHARP_STATUS_INVALID_ARGUMENT = 1,
  OCCTSHARP_STATUS_NULL_HANDLE = 2,
  OCCTSHARP_STATUS_OCCT_FAILURE = 3,
  OCCTSHARP_STATUS_STANDARD_EXCEPTION = 4,
  OCCTSHARP_STATUS_UNKNOWN_EXCEPTION = 5,
  OCCTSHARP_STATUS_FILE_IO_ERROR = 6,
  OCCTSHARP_STATUS_TRANSFER_FAILED = 7,
  OCCTSHARP_STATUS_INVALID_HANDLE = 8,
  OCCTSHARP_STATUS_TYPE_MISMATCH = 9
} OcctSharp_Status;
typedef struct OcctSharp_ShapeHandle OcctSharp_ShapeHandle;
typedef struct OcctSharp_TransientHandle OcctSharp_TransientHandle;
typedef struct OcctSharp_RealVectorHandle OcctSharp_RealVectorHandle;
typedef struct OcctSharp_IntRealMapHandle OcctSharp_IntRealMapHandle;
typedef struct OcctSharp_IntIndexedMapHandle OcctSharp_IntIndexedMapHandle;
typedef struct OcctSharp_StepAssemblyInput
{
  const char* file_path;
  double translation_x;
  double translation_y;
  double translation_z;
  double rotation_axis_x;
  double rotation_axis_y;
  double rotation_axis_z;
  double rotation_angle_radians;
} OcctSharp_StepAssemblyInput;
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_vector_create(
  const double* values, int32_t count, OcctSharp_RealVectorHandle** out_vector);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_vector_clone(
  const OcctSharp_RealVectorHandle* source, OcctSharp_RealVectorHandle** out_vector);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_vector_length(
  const OcctSharp_RealVectorHandle* vector, int32_t* length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_vector_value(
  const OcctSharp_RealVectorHandle* vector, int32_t index, double* value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_vector_append(
  OcctSharp_RealVectorHandle* vector, double value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_real_vector_set_value(
  OcctSharp_RealVectorHandle* vector, int32_t index, double value);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_real_vector_release(OcctSharp_RealVectorHandle* vector);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_real_map_create(
  const int32_t* keys, const double* values, int32_t count, OcctSharp_IntRealMapHandle** out_map);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_real_map_clone(
  const OcctSharp_IntRealMapHandle* source, OcctSharp_IntRealMapHandle** out_map);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_real_map_extent(
  const OcctSharp_IntRealMapHandle* map, int32_t* extent);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_real_map_is_bound(
  const OcctSharp_IntRealMapHandle* map, int32_t key, int32_t* is_bound);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_real_map_find(
  const OcctSharp_IntRealMapHandle* map, int32_t key, double* value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_real_map_bind(
  OcctSharp_IntRealMapHandle* map, int32_t key, double value);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_real_map_unbind(
  OcctSharp_IntRealMapHandle* map, int32_t key, int32_t* removed);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_int_real_map_release(OcctSharp_IntRealMapHandle* map);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_indexed_map_create(
  const int32_t* keys, int32_t count, OcctSharp_IntIndexedMapHandle** out_map);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_indexed_map_clone(
  const OcctSharp_IntIndexedMapHandle* source, OcctSharp_IntIndexedMapHandle** out_map);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_indexed_map_extent(
  const OcctSharp_IntIndexedMapHandle* map, int32_t* extent);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_indexed_map_add(
  OcctSharp_IntIndexedMapHandle* map, int32_t key, int32_t* index, int32_t* added);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_indexed_map_key(
  const OcctSharp_IntIndexedMapHandle* map, int32_t index, int32_t* key);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_indexed_map_find_index(
  const OcctSharp_IntIndexedMapHandle* map, int32_t key, int32_t* index);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_int_indexed_map_remove_last(
  OcctSharp_IntIndexedMapHandle* map, int32_t* removed_key);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_int_indexed_map_release(OcctSharp_IntIndexedMapHandle* map);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_create_compound(
  OcctSharp_ShapeHandle** out_shape);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_compound_add(
  OcctSharp_ShapeHandle* compound,
  const OcctSharp_ShapeHandle* child);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_step_merge_xde(
  const OcctSharp_StepAssemblyInput* inputs,
  int32_t input_count,
  const char* output_path);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_shape_release(OcctSharp_ShapeHandle* shape);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_transient_create(
  OcctSharp_TransientHandle** out_handle);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_transient_create_null(
  OcctSharp_TransientHandle** out_handle);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_transient_create_derived(
  OcctSharp_TransientHandle** out_handle);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_transient_clone(
  const OcctSharp_TransientHandle* source,
  OcctSharp_TransientHandle** out_handle);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_transient_try_cast_derived(
  const OcctSharp_TransientHandle* source,
  OcctSharp_TransientHandle** out_handle);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_transient_is_null(
  const OcctSharp_TransientHandle* handle,
  int32_t* out_is_null);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_transient_get_ref_count(
  const OcctSharp_TransientHandle* handle,
  int32_t* out_ref_count);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_transient_get_type_name(
  const OcctSharp_TransientHandle* handle,
  const char** out_type_name);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_transient_is_kind(
  const OcctSharp_TransientHandle* handle,
  const char* type_name,
  int32_t* out_is_kind);
OCCTSHARP_API void OCCTSHARP_CALL occtsharp_transient_release(OcctSharp_TransientHandle* handle);