OcctSharp/src/OcctSharp/Interop/NativeMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_vector_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateRealVector(nint values, int count, out nint vector);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_vector_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneRealVector(RealVectorHandle source, out nint vector);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_vector_length")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetRealVectorLength(RealVectorHandle vector, out int length);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_vector_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetRealVectorValue(RealVectorHandle vector, int index, out double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_vector_append")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus AppendRealVector(RealVectorHandle vector, double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_vector_set_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus SetRealVectorValue(RealVectorHandle vector, int index, double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_real_vector_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseRealVector(nint vector);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_real_map_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateIntRealMap(nint keys, nint values, int count, out nint map);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_real_map_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneIntRealMap(IntRealMapHandle source, out nint map);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_real_map_extent")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetIntRealMapExtent(IntRealMapHandle map, out int extent);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_real_map_is_bound")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus IsIntRealMapBound(IntRealMapHandle map, int key, out int isBound);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_real_map_find")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus FindIntRealMap(IntRealMapHandle map, int key, out double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_real_map_bind")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus BindIntRealMap(IntRealMapHandle map, int key, double value);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_real_map_unbind")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus UnbindIntRealMap(IntRealMapHandle map, int key, out int removed);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_real_map_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseIntRealMap(nint map);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_indexed_map_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateIntIndexedMap(nint keys, int count, out nint map);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_indexed_map_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneIntIndexedMap(IntIndexedMapHandle source, out nint map);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_indexed_map_extent")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetIntIndexedMapExtent(IntIndexedMapHandle map, out int extent);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_indexed_map_add")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus AddIntIndexedMap(IntIndexedMapHandle map, int key, out int index, out int added);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_indexed_map_key")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetIntIndexedMapKey(IntIndexedMapHandle map, int index, out int key);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_indexed_map_find_index")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus FindIntIndexedMapIndex(IntIndexedMapHandle map, int key, out int index);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_indexed_map_remove_last")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus RemoveLastIntIndexedMap(IntIndexedMapHandle map, out int removedKey);
    [LibraryImport(LibraryName, EntryPoint = "occtsharp_int_indexed_map_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseIntIndexedMap(nint map);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_shape_create_compound")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateCompound(out nint shape);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_compound_add")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus AddToCompound(ShapeHandle compound, ShapeHandle child);

    [LibraryImport(
        LibraryName,
        EntryPoint = "occtsharp_step_merge_xde",
        StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus MergeStepXde(
        nint inputs,
        int inputCount,
        string outputPath);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_shape_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseShape(nint shape);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_transient_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateTransient(out nint handle);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_transient_create_null")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateNullTransient(out nint handle);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_transient_create_derived")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CreateDerivedTransient(out nint handle);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_transient_clone")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CloneTransient(
        SharedTransientHandle source,
        out nint handle);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_transient_try_cast_derived")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus TryCastDerivedTransient(
        SharedTransientHandle source,
        out nint handle);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_transient_is_null")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus IsTransientNull(
        SharedTransientHandle handle,
        out int isNull);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_transient_get_ref_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetTransientRefCount(
        SharedTransientHandle handle,
        out int referenceCount);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_transient_get_type_name")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus GetTransientTypeName(
        SharedTransientHandle handle,
        out nint typeName);

    [LibraryImport(
        LibraryName,
        EntryPoint = "occtsharp_transient_is_kind",
        StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus IsTransientKind(
        SharedTransientHandle handle,
        string typeName,
        out int isKind);

    [LibraryImport(LibraryName, EntryPoint = "occtsharp_transient_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ReleaseTransient(nint handle);
}
